<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>edu.cursor</groupId>
    <artifactId>hw-kovalevskyi-maven</artifactId>
    <packaging>pom</packaging>
    <version>1.0</version>

    <name>parent</name>

    <properties>
        <maven.compiler.source>19</maven.compiler.source>
        <maven.compiler.target>19</maven.compiler.target>
        <project.java.version>19</project.java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <lombok.version>1.18.24</lombok.version>
        <junit.version>5.9.1</junit.version>
        <assertj.version>3.23.1</assertj.version>
        <mockito.version>4.9.0</mockito.version>
        <jacoco.version>0.8.8</jacoco.version>
        <slf4j.version>2.0.3</slf4j.version>
        <logback.version>1.4.4</logback.version>
        <mysql.version>8.0.31</mysql.version>
        <pgsql.version>42.5.0</pgsql.version>
        <mongo.version>3.12.11</mongo.version>
        <oracle.version>21.7.0.0</oracle.version>
        <spring.version>5.3.23</spring.version>
        <annotation.version>1.3.2</annotation.version>
        <spring.boot.version>2.7.5</spring.boot.version>
        <snakeyaml.version>1.33</snakeyaml.version>
        <protobuf.version>3.21.9</protobuf.version>
        <jaxb_api.version>2.3.1</jaxb_api.version>
        <guava.version>31.1-jre</guava.version>
        <validation.version>2.0.1.Final</validation.version>
    </properties>

    <modules>
        <module>HW01</module>
        <module>HW02</module>
        <module>HW03</module>
        <module>HW04</module>
        <module>HW05</module>
        <module>HW06</module>
        <module>HW07</module>
        <module>HW08</module>
        <module>HW09</module>
        <module>HW10</module>
        <module>HW11</module>
        <module>HW12</module>
        <module>HW13</module>
    </modules>
</project>